fixed issue with dropdown menu not fitting within device

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -346,14 +346,14 @@ div.statistics {
         & > li:first-of-type {
             text-align: center;
             padding: 28px 0 8px 0;
-            @media screen and (min-width: 350px) {
+            @media screen and (min-width: 350px) and (orientation: portrait) {
                 padding: 28px 0 12px 0;
             }
         }
         & > li {
             text-align: center;
             padding: 8px 0;
-            @media screen and (min-width: 350px) {
+            @media screen and (min-width: 350px) and (orientation: portrait) {
                 padding: 12px 0;
             }
         }
